labs/lab06-rollout-rollback/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift
    lab: lab06
spec:
  to:
    kind: Service
    name: hello-openshift
  port:
    targetPort: http
